fix sidebar z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -256,3 +256,6 @@
   cursor: pointer;
   outline: none;
 }
+.sidebar {
+  z-index: 99;
+}
