--- a/src/components/UI/Sidebar/style.css
+++ b/src/components/UI/Sidebar/style.css
@@ -12,14 +12,7 @@
     user-select: none;
     overflow: auto;
     background-color: #FFFFFF;
-}
-
-.sidebar {
-	width: 16em;
-    overflow: auto;
-    /*min-height: 100%;*/
-}
-
+}   
 .userSidebar {
     display: inline-block;
 }
