--- a/src/components/UI/Title_Panel/style.css
+++ b/src/components/UI/Title_Panel/style.css
@@ -25,7 +25,7 @@
   color: white;
   font-size: 24px;
   position: fixed;
-  z-index: 100;
+  z-index: 50;
   top:0%;
   height: 92px;
   width: 100%;
